Remove ignored files and resubmitting files